powr-2575-b remove break tag to fix entity ref autocomplete spacing in chrome

--- a/web/themes/custom/cloudy/src/components/_header.scss
+++ b/web/themes/custom/cloudy/src/components/_header.scss
@@ -289,7 +289,7 @@
         flex-direction: column;
         color: $cloudy-color-neutral-0;
         background: $cloudy-color-blue-800;
-        border: 0;
+        border-color: $cloudy-color-blue-800;
         .search-api-autocomplete-suggestion {
           color: inherit;
           background: none;
